--- a/ChemsonLab.API/appsettings.json
+++ b/ChemsonLab.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LocalhostConnectionString": "Server=localhost;Database=chemsonlabdb;User=root;Password=11226poom"
+    "LocalhostConnectionString": "Server=localhost;Database=chemsonlabdb;User=root;Password=XXXXX"
   }
 }
